<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">SCO Prototype</string>
    <string name="app_name">Student Classroom Observer</string>
    <string name="cancel"> Cancel </string>
    <string name="save"> Save </string>
	
	<!-- student_list -->
	<string name="student_list_addStudent">add student</string>
    <string name="searchStudents">Search Students</string>
    <string name="searchClasses">Search CLasses</string>
    
    <!-- add student -->
    <string name="add_student_studentFName">First name: </string>
    <string name="add_student_studentLName">Last name: </string>
    
    <!-- add course -->
    <string name="add_course_name">Course Name: </string>
    <string name="add_course_category">Category: </string>
    <string name="add_course_year">Course Year: </string>
    <string name="add_course_semester">Semester: </string>
    
    <!-- convert_to_pdf -->
    <string name="convert_to_pdf_createFor">Creating PDF file for student: </string>
    <string name="convert_to_pdf_mail">Send via Mail </string>
    <string name="convert_to_pdf_open">Open PDF </string>
    <string name="convert_to_pdf_done">Done </string>
    
    <!--  faq -->
    <string name="faq_faqHead">FAQ </string>
    <string name="faq_faqText">Frequently asked questions are listed questions and answers, all supposed to be commonly asked in some context, and pertaining to a particular topic. "FAQ" is usually pronounced as an initialism rather than an acronym, but an acronym form does exist. Since the acronym FAQ originated in textual media, its pronunciation varies; "fack", "faak", "fax", and "facts" are commonly heard.[citation needed] Depending on usage, the term may refer specifically to a single frequently asked question, or to an assembled list of many questions and their answers. </string>
    <string name="faq_aboutHead">About </string>
    <string name="faq_aboutText">
The App should support lecturers to find out whether a student has problems with different subjects in class, for example problems in reading, calculation, writing, painting, being concentrated or just paying attention. Problems of students in different subjects could be an indication, that this student has special needs. Based on the collected data the app should provide proposals if a psychologist should be contacted. 
The app provides a list of the students in class. The lecturer can click on a student to open his/her profile. He/she can see the existing entries of the student can edit them or add missing notes. To provide more detailed information, the user can select the hardness grade for some entries. The user interface is very intuitive and easy to use, so that the lecturer is not distracted from his lecture or lesson. 
The user is be able to export a student’s profile in a PDF-file to print or share it. It should also be possible to send the student’s profile to a psychologist, which can provide further support.</string>

</resources>