<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >
        
        <TextView android:text="@string/add_student_studentFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/studentFNameEditText"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >
        
        <TextView android:text="@string/add_student_studentLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/studentLNameEditText"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">
        
        <Button android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <Button android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </TableRow>

</TableLayout>