<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_name" 
            android:textSize="23dp"/>

        <EditText
            android:id="@+id/courseNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text" 
            android:textSize="23dp"/>
    </TableRow>

        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_category"
            android:textSize="23dp" />

        <Spinner
            android:id="@+id/courseCategorySpinner"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:inputType="text" 
            android:textSize="23dp"/>

    </TableRow>
    
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_semester"
            android:textSize="23dp" />


        <Spinner
            android:id="@+id/courseSemesterSpinner"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:inputType="text" 
            android:textSize="23dp"/>

    </TableRow>
        
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_year" 
            android:textSize="23dp"/>

        <EditText
            android:id="@+id/courseYearEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text" 
            android:textSize="23dp"/>
    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
		android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" 
            android:textSize="23dp"/>
        
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="23dp" />

    </TableRow>

</TableLayout>