<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student_studentFName"
            android:textSize="23dp" />

        <EditText
            android:id="@+id/studentFNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="23dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student_studentLName"
            android:textSize="23dp" />

        <EditText
            android:id="@+id/studentLNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="23dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="23dp" />
        
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="23dp" />

    </TableRow>

</TableLayout>